language name in original language

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -1,35 +1,5 @@
 ﻿[Text]
-OPTION_VALUE_CATALAN=Catalán
-OPTION_VALUE_CHINESE=Chino
-OPTION_VALUE_CROATIAN=Croata
-OPTION_VALUE_CZECH=Checo
-OPTION_VALUE_DANISH=Danés
-OPTION_VALUE_DUTCH=Holandés
-OPTION_VALUE_ENGLISH=Inglés
-OPTION_VALUE_EUSKARA=Euskera
-OPTION_VALUE_FINNISH=Finlandés
-OPTION_VALUE_FRENCH=Francés
-OPTION_VALUE_GAELIC=Gaélico Escocés
-OPTION_VALUE_GALICIAN=Gallego
-OPTION_VALUE_GERMAN=Alemán
-OPTION_VALUE_GREEK=Griego
-OPTION_VALUE_HUNGARIAN=Húngaro
-OPTION_VALUE_ICELANDIC=Islándico
-OPTION_VALUE_ITALIAN=Italiano
-OPTION_VALUE_JAPANESE=Japonés
-OPTION_VALUE_LUXEMBOURGISH=Luxemburgués
-OPTION_VALUE_NORWEGIAN=Noruego
-OPTION_VALUE_POLISH=Polaco
-OPTION_VALUE_PORTUGUESE=Portugués
-OPTION_VALUE_ROMANIAN=Rumano
-OPTION_VALUE_RUSSIAN=Ruso
-OPTION_VALUE_SERBIAN=Serbio
-OPTION_VALUE_SLOVAK=Eslovaco
-OPTION_VALUE_SLOVENIAN=Esloveno
-OPTION_VALUE_SPANISH=Español
-OPTION_VALUE_SWEDISH=Sueco
-OPTION_VALUE_ROMANIAN=Rumano
-OPTION_VALUE_GAELIC=Gaélico
+LANGUAGE=Español
 
 OPTION_VALUE_EASY=Fácil
 OPTION_VALUE_MEDIUM=Medio
@@ -71,8 +41,8 @@ OPTION_VALUE_SEC=Segundo
 OPTION_VALUE_SECS=Segundos
 
 OPTION_VALUE_PLAIN=Estilizada
-OPTION_VALUE_OLINE1=con borde
-OPTION_VALUE_OLINE2=con borde 2
+OPTION_VALUE_OLINE1=Con borde fino
+OPTION_VALUE_OLINE2=Con borde grueso
 
 OPTION_VALUE_SIMPLE=Simple
 OPTION_VALUE_ZOOM=Acercar
@@ -86,13 +56,14 @@ OPTION_VALUE_AMERICAN=Americano
 
 OPTION_VALUE_BLUE=Azul
 OPTION_VALUE_GREEN=Verde
-OPTION_VALUE_PINK=Rosado
+OPTION_VALUE_PINK=Rosa
 OPTION_VALUE_RED=Rojo
 OPTION_VALUE_VIOLET=Violeta
 OPTION_VALUE_ORANGE=Naranja
 OPTION_VALUE_YELLOW=Amarillo
 OPTION_VALUE_BROWN=Marrón
 OPTION_VALUE_BLACK=Negro
+OPTION_VALUE_MAGENTA=Magenta
 
 OPTION_VALUE_SING=Cantar
 OPTION_VALUE_SELECT_PLAYERS=Elegir jugadores
@@ -138,8 +109,9 @@ SING_OPTIONS_GAME_DIFFICULTY=Dificultad
 SING_OPTIONS_GAME_LANGUAGE=Idioma
 SING_OPTIONS_GAME_TABS=Mostrar carpetas
 SING_OPTIONS_GAME_SORTING=Clasificar por
-SING_OPTIONS_GAME_DEBUG=Mostrar FPS
 SING_OPTIONS_GAME_SONGMENU=Menú
+SING_OPTIONS_GAME_JOYPAD_SUPPORT=Activar gamepad
+
 OPTION_VALUE_ROULETTE=Ruleta
 OPTION_VALUE_CHESSBOARD=Ajedrez
 OPTION_VALUE_CAROUSEL=Diapositiva
@@ -151,11 +123,12 @@ OPTION_VALUE_MOSAIC=Baldosas
 SING_OPTIONS_GRAPHICS_WHEREAMI=Opciones gráficas
 SING_OPTIONS_GRAPHICS_DESC=Cambia los ajustes de video
 SING_OPTIONS_GRAPHICS_RESOLUTION=Resolución
+SING_OPTIONS_GRAPHICS_EFFECTSING=Efectos al cantar
+SING_OPTIONS_GRAPHICS_SCREENFADE=Animaciones
+SING_OPTIONS_GRAPHICS_LOADANIMATION=Animación de carga
 SING_OPTIONS_GRAPHICS_FULLSCREEN=Pantalla completa
 SING_OPTIONS_GRAPHICS_DEPTH=Profundidad de color
 SING_OPTIONS_GRAPHICS_VISUALIZER=Visualización
-SING_OPTIONS_GRAPHICS_OSCILLOSCOPE=Osciloscopio
-SING_OPTIONS_GRAPHICS_LINEBONUS=Bonus de línea
 SING_OPTIONS_GRAPHICS_MOVIE_SIZE=Tamaño del video
 
 SING_OPTIONS_SOUND_WHEREAMI=Opciones de sonido
@@ -170,8 +143,6 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Modo 2 jugadores
 ;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Volumen vista previa
 SING_OPTIONS_SOUND_PREVIEWFADING=Desvanecer audio
-
-
 
 
 SING_OPTIONS_LYRICS_WHEREAMI=Opciones de letras
@@ -193,14 +164,11 @@ SING_OPTIONS_RECORD_CARD=Dispositivo de sonido
 SING_OPTIONS_RECORD_INPUT=Entrada
 SING_OPTIONS_RECORD_CHANNEL=Canal
 
+SING_OPTIONS_ADVANCED_DEBUG=Mostrar FPS
+SING_OPTIONS_ADVANCED_OSCILLOSCOPE=Osciloscopio
 SING_OPTIONS_ADVANCED_WHEREAMI=Opciones avanzadas
 SING_OPTIONS_ADVANCED_DESC=Opciones avanzadas
-SING_OPTIONS_ADVANCED_EFFECTSING=Efectos al cantar
-SING_OPTIONS_ADVANCED_SCREENFADE=Animaciones
-SING_OPTIONS_ADVANCED_LOADANIMATION=Animación de carga
 SING_OPTIONS_ADVANCED_ASKBEFOREDEL=Confirmar al salir
-SING_OPTIONS_ADVANCED_LINEBONUS=Bonus de línea
-SING_OPTIONS_ADVANCED_JOYPAD_SUPPORT=Activar gamepad
 ;SING_OPTIONS_ADVANCED_COUNT_HOW_OFTEN_SUNG=
 SING_OPTIONS_ADVANCED_ONSONGCLICK=Al seleccionar canción
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto menú de fiesta
@@ -762,7 +730,7 @@ ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ABOUT_MAIN_WHEREAMI=Acerca de...
 ABOUT_USDX_CREDITS=Créditos originales
 ABOUT_USDX_DEVELOPEDBY=Desarrollado por
-ABOUT_OVERVIEW=Descubre una nueva manera de cantar, solo, en pareja o con amigos. \nLa diversión estará asegurada.\n\nWorldParty es una modificación de la versión original Ultrastar Deluxe 1.1 diseñado y desarrollado por el equipo de UltraStar España, cuenta con el apoyo de la comunidad más grande del mundo de karaoke. \n\n\nEste programa es gratuito y libre bajo licencia GPL. \n\nVisitad nuestra web para más información.\n\nhttp://ultrastar-es.org
+ABOUT_OVERVIEW=Descubre una nueva manera de cantar, solo, en pareja o con amigos. \nLa diversión estará asegurada.\n\nWorldParty es una modificación de la versión original Ultrastar Deluxe 1.1 diseñado y desarrollado por el equipo de UltraStar España, cuenta con el apoyo de la comunidad más grande del mundo de karaoke. \n\n\nEste programa es gratuito y libre bajo licencia GPL. \n\nVisitad nuestra web para más información.\n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Desarrollado por
-DEVELOPERS_OVERVIEW=Gente que ha contribuido en este proyecto:\n\n\nZup3r_vock\n\nDaniel20\n\n\n\n Visítanos para más información.\n\nhttp://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Gente que ha contribuido en este proyecto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\n\n Visítanos para más información.\n\nhttps://ultrastar-es.org
