--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -1,33 +1,5 @@
 ﻿[Text]
-;TODO: OPTION_VALUE_CATALAN=Catalan
-;TODO: OPTION_VALUE_CHINESE=Chinese
-;TODO: OPTION_VALUE_CROATIAN=Croatian
-;TODO: OPTION_VALUE_CZECH=Czech
-;TODO: OPTION_VALUE_DANISH=Danish
-;TODO: OPTION_VALUE_DUTCH=Dutch
-;TODO: OPTION_VALUE_ENGLISH=English
-;TODO: OPTION_VALUE_EUSKARA=Euskara
-;TODO: OPTION_VALUE_FINNISH=Finnish
-;TODO: OPTION_VALUE_FRENCH=French
-;TODO: OPTION_VALUE_GAELIC=Scottish Gaelic
-;TODO: OPTION_VALUE_GALICIAN=Galician
-;TODO: OPTION_VALUE_GERMAN=German
-;TODO: OPTION_VALUE_GREEK=Greek
-;TODO: OPTION_VALUE_HUNGARIAN=Hungarian
-;TODO: OPTION_VALUE_ICELANDIC=Icelandic
-;TODO: OPTION_VALUE_ITALIAN=Italian
-;TODO: OPTION_VALUE_JAPANESE=Japanese
-;TODO: OPTION_VALUE_LUXEMBOURGISH=Luxembourgish
-;TODO: OPTION_VALUE_NORWEGIAN=Norwegian
-;TODO: OPTION_VALUE_POLISH=Polish
-;TODO: OPTION_VALUE_PORTUGUESE=Portuguese
-;TODO: OPTION_VALUE_ROMANIAN=Romanian
-;TODO: OPTION_VALUE_RUSSIAN=Russian
-;TODO: OPTION_VALUE_SERBIAN=Serbian
-;TODO: OPTION_VALUE_SLOVAK=Slovak
-;TODO: OPTION_VALUE_SLOVENIAN=Slovenian
-;TODO: OPTION_VALUE_SPANISH=Spanish
-;TODO: OPTION_VALUE_SWEDISH=Swedish
+LANGUAGE=Italiano
 
 OPTION_VALUE_EASY=Facile
 OPTION_VALUE_MEDIUM=Media
@@ -44,8 +16,8 @@ OPTION_VALUE_TITLE=Titolo
 OPTION_VALUE_ARTIST=Artista
 OPTION_VALUE_TITLE2=Titolo2
 OPTION_VALUE_ARTIST2=Artista2
-;TODO: OPTION_VALUE_YEAR=Year
-;TODO: OPTION_VALUE_DECADE=Decade
+OPTION_VALUE_YEAR=Anno
+OPTION_VALUE_DECADE=Decennio
 OPTION_VALUE_PLAYLIST=Playlist
 
 ;TODO: OPTION_VALUE_BORDERLESS=Borderless
@@ -96,10 +68,7 @@ OPTION_VALUE_SING=Canta
 OPTION_VALUE_SELECT_PLAYERS=Seleziona giocatore
 OPTION_VALUE_OPEN_MENU=Apri il Menu
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-OPTION_VALUE_HARDWARE_CURSOR=Cursore Hardware
-OPTION_VALUE_SOFTWARE_CURSOR= Cursore Software
+
 
 SING_LOADING=Caricamento...
 
@@ -242,7 +211,6 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONGS_IN_CAT=Canzoni
 PLAYLIST_CATTEXT=Playlist: %s
 
-;TODO: SING_TIME=TIME
 SING_TOTAL=Punteggio
 SING_MODE=Canta
 SING_NOTES=Note giuste
@@ -502,8 +470,8 @@ SING_OPTIONS_NETWORK_WHEREAMI=Impostazioni Internet
 SING_OPTIONS_NETWORK_DESC=Impostazioni generali
 SING_OPTIONS_NETWORK_INSERT_USER_INFO=Premi il tasto "Ins" per aggiungere un giocatore a questa rete...
 SING_OPTIONS_NETWORK_WEBSITE=Website SING_OPTIONS_NETWORK_USERNAME=Username SING_OPTIONS_NETWORK_PASSWORD=Password
-;TODO: SING_OPTIONS_NETWORK_USERNAME=Username
-;TODO: SING_OPTIONS_NETWORK_PASSWORD=Password
+SING_OPTIONS_NETWORK_USERNAME=Nome utente
+SING_OPTIONS_NETWORK_PASSWORD=Parola d'ordine
 SING_OPTIONS_NETWORK_SEND_SAVE_PLAYER_NAME=Invia Nome
 SING_OPTIONS_NETWORK_AUTO_MODE=Auto
 SING_OPTIONS_NETWORK_AUTO_PLAYER=Riproduci
@@ -654,10 +622,10 @@ SONG_MENU_SORTING_ALL=Tutte
 SONG_MENU_SORTING_DUET=Duetti
 SONG_MENU_SORTING_APPLY=Applica
 
-;TODO: SING_OPTIONS_WEBCAM=Webcam
+SING_OPTIONS_WEBCAM=Webcam
 ;TODO: SING_OPTIONS_WEBCAM_DESC=Webcam Settings
 ;TODO: SING_OPTIONS_WEBCAM_WHEREAMI=Webcam Options
-;TODO: SING_OPTIONS_WEBCAM_ID=Webcam
+SING_OPTIONS_WEBCAM_ID=Webcam
 SING_OPTIONS_WEBCAM_RESOLUTION=Risoluzione
 ;TODO: SING_OPTIONS_WEBCAM_FPS=FPS
 ;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
@@ -695,12 +663,12 @@ NAME_PLAYERS_COUNT=Numero di giocatori
 NAME_CURRENT_PLAYER=Giocatore
 
 SING_OPTIONS_GAME_SONGMENU=Menu Canzone
-;TODO: OPTION_VALUE_ROULETTE=Roulette
-;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
-;TODO: OPTION_VALUE_CAROUSEL=Carousel
+OPTION_VALUE_ROULETTE=Roulette
+OPTION_VALUE_CHESSBOARD=Scacchiera
+OPTION_VALUE_CAROUSEL=Giostra
 ;TODO: OPTION_VALUE_SLOTMACHINE=Slot Machine
-;TODO: OPTION_VALUE_LIST=List
-;TODO: OPTION_VALUE_MOSAIC=Tile
+OPTION_VALUE_LIST=Lista
+OPTION_VALUE_MOSAIC=Piastrella
 
 SING_OPTIONS_JUKEBOX=Jukebox
 ;TODO: SING_OPTIONS_JUKEBOX_DESC=Default Configurations of Jukebox
