--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -1,94 +1,93 @@
 ﻿[Text]
-LANGUAGE=English
+LANGUAGE=Lietuvių
 
-OPTION_VALUE_EASY=Easy
-OPTION_VALUE_MEDIUM=Medium
-OPTION_VALUE_HARD=Hard
+OPTION_VALUE_EASY=Lengva
+OPTION_VALUE_MEDIUM=Vidutinis
+OPTION_VALUE_HARD=Sunku
 
 OPTION_VALUE_ON=On
-OPTION_VALUE_OFF=Off
+OPTION_VALUE_OFF=Nuo
 
-OPTION_VALUE_EDITION=Edition
-OPTION_VALUE_GENRE=Genre
-OPTION_VALUE_LANGUAGE=Language
-OPTION_VALUE_FOLDER=Folder
-OPTION_VALUE_TITLE=Title
-OPTION_VALUE_ARTIST=Artist
-OPTION_VALUE_TITLE2=Title2
-OPTION_VALUE_ARTIST2=Artist2
-OPTION_VALUE_YEAR=Year
-OPTION_VALUE_DECADE=Decade
-OPTION_VALUE_PLAYLIST=Playlist
-
-OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_EDITION=Leidimas
+OPTION_VALUE_GENRE=Žanras
+OPTION_VALUE_LANGUAGE=Kalba
+OPTION_VALUE_FOLDER=Aplankas
+OPTION_VALUE_TITLE=Pavadinimas
+OPTION_VALUE_ARTIST=Menininkas
+OPTION_VALUE_TITLE2=Pavadinimas2
+OPTION_VALUE_ARTIST2=Menininkas2
+OPTION_VALUE_YEAR=Metai
+OPTION_VALUE_DECADE=Dešimtmetis
+OPTION_VALUE_PLAYLIST=Grojaraštis
+//------------------------------------------------------------------
+OPTION_VALUE_BORDERLESS=Be sienų
 
 OPTION_VALUE_WHENNOVIDEO=When No Video
 OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
 
-OPTION_VALUE_SMALL=Small
-OPTION_VALUE_BIG=Big
+OPTION_VALUE_SMALL=Mažas
+OPTION_VALUE_BIG=Didelis
 
 OPTION_VALUE_HALF=Half
 OPTION_VALUE_FULL_VID=Full (Video)
 OPTION_VALUE_FULL_VID_BG=Full (BG & Video)
 
-OPTION_VALUE_GAIN_SOFT=Soft
-OPTION_VALUE_GAIN_MEDIUM=Medium
-OPTION_VALUE_GAIN_HARD=Hard
+OPTION_VALUE_GAIN_SOFT=Minkštas
+OPTION_VALUE_GAIN_MEDIUM=Vidutinis
+OPTION_VALUE_GAIN_HARD=Sunku
 
 OPTION_VALUE_AUTO=Auto
-OPTION_VALUE_SEC=Second
-OPTION_VALUE_SECS=Seconds
+OPTION_VALUE_SEC=Antra
+OPTION_VALUE_SECS=Sekundes
 
-OPTION_VALUE_PLAIN=Plain
+OPTION_VALUE_PLAIN=Stilizuotas
 OPTION_VALUE_OLINE1=OLine1
 OPTION_VALUE_OLINE2=OLine2
 
-OPTION_VALUE_SIMPLE=Simple
-OPTION_VALUE_ZOOM=Zoom
-OPTION_VALUE_SLIDE=Slide
-OPTION_VALUE_BALL=Ball
-OPTION_VALUE_SHIFT=Shift
+OPTION_VALUE_SIMPLE=Paprasta
+OPTION_VALUE_ZOOM=Priartinti
+OPTION_VALUE_SLIDE=Slysti
+OPTION_VALUE_BALL=Kamuolys
+OPTION_VALUE_SHIFT=Perkelti
 
-OPTION_VALUE_EURO=Euro
-OPTION_VALUE_JAPAN=Japan
-OPTION_VALUE_AMERICAN=American
+OPTION_VALUE_EURO=Euras
+OPTION_VALUE_JAPAN=Japonija
+OPTION_VALUE_AMERICAN=Amerikietis
 
-OPTION_VALUE_BLUE=Blue
-OPTION_VALUE_GREEN=Green
-OPTION_VALUE_PINK=Pink
-OPTION_VALUE_RED=Red
-OPTION_VALUE_VIOLET=Violet
-OPTION_VALUE_ORANGE=Orange
-OPTION_VALUE_YELLOW=Yellow
-OPTION_VALUE_BROWN=Brown
-OPTION_VALUE_BLACK=Black
-OPTION_VALUE_MAGENTA=Magenta
+OPTION_VALUE_BLUE=Mėlynas
+OPTION_VALUE_GREEN=Žalias
+OPTION_VALUE_PINK=Rožinis
+OPTION_VALUE_RED=Raudonas
+OPTION_VALUE_VIOLET=Violetinis
+OPTION_VALUE_ORANGE=Oranžinis
+OPTION_VALUE_YELLOW=Geltonas
+OPTION_VALUE_BROWN=Rudas
+OPTION_VALUE_BLACK=Juodas
 
-OPTION_VALUE_SING=Sing
-OPTION_VALUE_SELECT_PLAYERS=Select Players
-OPTION_VALUE_OPEN_MENU=Open Menu
+OPTION_VALUE_SING=Dainuoti
+OPTION_VALUE_SELECT_PLAYERS=Pasirinkite žaidėjus
+OPTION_VALUE_OPEN_MENU=Atidarykite meniu
 
 
-SING_LOADING=Loading...
+SING_LOADING=Kraunasi...
 
-SING_CHOOSE_MODE=Choose Mode
-SING_SING=Sing
-SING_SING_DESC=sing solo or duet
+SING_CHOOSE_MODE=Pasirinkite režimą
+SING_SING=Dainuoti
+SING_SING_DESC=Dainuoti solo ar duetą
 
-SING_MULTI=Party
-SING_MULTI_DESC=Sing in party-mode
+SING_MULTI=Partija
+SING_MULTI_DESC=Dainuoti grupėje
 
-SING_TOOLS=Tools
+SING_TOOLS=Įrankiai
 
-SING_STATS=Stats
-SING_STATS_DESC=View the statistics
+SING_STATS=Statistika
+SING_STATS_DESC=Peržiūrėkite statistiką
 
-SING_GAME_OPTIONS=Game options
-SING_GAME_OPTIONS_DESC=Change game settings
+SING_GAME_OPTIONS=Žaidimo parinktys
+SING_GAME_OPTIONS_DESC=Keisti žaidimo nustatymus
 
-SING_EXIT=Quit
-SING_EXIT_DESC=Quit game
+SING_EXIT=Išeiti
+SING_EXIT_DESC=Baigti žaidimą
 
 SING_OPTIONS=Options
 SING_OPTIONS_DESC=Change settings
@@ -167,19 +166,19 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=After Song Select
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Auto PartyMenu
 
 
-SING_LEGEND_SELECT=Select
-SING_LEGEND_NAVIGATE=Navigate
-SING_LEGEND_CONTINUE=Continue
-SING_LEGEND_ESC=Back
+SING_LEGEND_SELECT=Pasirinkite
+SING_LEGEND_NAVIGATE=Naršyti
+SING_LEGEND_CONTINUE=Tęsti
+SING_LEGEND_ESC=Atgal
 
-SING_PLAYER_TITLE=Profiles
-SING_PLAYER_READY=Players ready to sing
-SING_PLAYER_COUNT=Number of players
-SING_PLAYER_EDIT=Customize a player
-SING_PLAYER_NAME=Write your name
-SING_PLAYER_COLOR=Pick a color
-SING_PLAYER_LEVEL=Choose a level
-SING_PLAYER_AVATAR=Select your avatar
+SING_PLAYER_TITLE=Profiliai
+SING_PLAYER_READY=Žaidėjai, pasiruošę dainuoti
+SING_PLAYER_COUNT=Žaidėjų skaičius
+SING_PLAYER_EDIT=Tinkinti žaidėją
+SING_PLAYER_NAME=Parašyk savo vardą
+SING_PLAYER_COLOR=Pasirinkite spalvą
+SING_PLAYER_LEVEL=Pasirinkite lygį
+SING_PLAYER_AVATAR=Pasirinkite savo avatarą
 
 SING_DIFFICULTY_DESC=Select difficulty
 SING_DIFFICULTY_WHEREAMI=Difficulty
@@ -194,13 +193,12 @@ SING_SONG_SELECTION_GOTO=Go to ..
 SING_SONG_SELECTION=Song selection
 SING_SONG_SELECTION_MENU=Menu
 SING_SONG_SELECTION_PLAYLIST=Playlist
-SING_SONG_IN_CAT=Song
 SING_SONGS_IN_CAT=Songs
 PLAYLIST_CATTEXT=Playlist: %s
 SING_SONG_SELECTION_LEGEND_TITLE=Legend
 SING_SONG_SELECTION_LEGEND_VIDEO=Video
-SING_SONG_SELECTION_LEGEND_MEDLEY=Medley
-SING_SONG_SELECTION_LEGEND_MEDLEYC=Medley calculated
+SING_SONG_SELECTION_LEGEND_MEDLEY=Short version
+SING_SONG_SELECTION_LEGEND_MEDLEYC=Short version calculated
 SING_SONG_SELECTION_LEGEND_DUET=Duet
 
 SING_TOTAL=Total
@@ -228,17 +226,17 @@ SING_TOP_5_CHARTS_WHEREAMI=Top 5
 SING_TOP_5_CHARTS_CONTINUE=To song selection
 SING_TOP_5_CHARTS_SWITCH_DIFFICULTY=Switch difficulty
 
-POPUP_PERFECT=perfect!
-POPUP_AWESOME=awesome!
-POPUP_GREAT=great!
-POPUP_GOOD=good!
-POPUP_NOTBAD=not bad!
-POPUP_BAD=bad!
-POPUP_POOR=poor!
-POPUP_AWFUL=awful!
+POPUP_PERFECT=puikus
+POPUP_AWESOME=nuostabu
+POPUP_GREAT=didelis
+POPUP_GOOD=gerai
+POPUP_NOTBAD=neblogai
+POPUP_BAD=blogai
+POPUP_POOR=prastas
+POPUP_AWFUL=baisus
 
 IMPLODE_GLUE1=,
-IMPLODE_GLUE2= and
+IMPLODE_GLUE2= ir
 
 SONG_MENU_NAME_MAIN=Song menu
 SONG_MENU_PLAY=Sing
@@ -453,7 +451,6 @@ ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song could not be loaded: File not found
 ERROR_CORRUPT_SONG_NO_NOTES=Song could not be loaded: Can''t find any notes
 ERROR_CORRUPT_SONG_NO_BREAKS=Song could not be loaded: Can''t find any linebreaks
 ERROR_CORRUPT_SONG_UNKNOWN_IN_LINE=Song could not be loaded: Error parsing line %0:d
-ERROR_DUETS_NOT_EDITABLE=Duet songs are currently not editable.
 ERROR_NO_EDITOR=This feature is not available on this version.
 ERROR_PLAYER_DEVICE_ASSIGNMENT=Player %d is assigned to multiple microphones. Please check your record options
 ERROR_PLAYER_NO_DEVICE_ASSIGNMENT=Player %d is not assigned to a microphone. Please check your record options
@@ -575,17 +572,17 @@ INFO_UNDO=Undo last operation
 INFO_FILE_SAVED=File saved
 INFO_TIME_FIXED=Timings corrected
 INFO_CAPITALIZE=Capitalization corrected
-INFO_EXIT=Do you want to leave editor without saving ?
+INFO_EXIT=Do you want leave editor without save ?
 INFO_SONG_RELOADED=Song reloaded
-INFO_DIVIDED_BPM=BPM Divided by 2
-INFO_MULTIPLIED_BPM=BPM Multiplied by 2
+INFO_DIVIDED_BPM=BPM Divided
+INFO_MULTIPLIED_BPM=BPM Multiplied
 INFO_PLAY_SONG=Play song
 INFO_PLAY_SENTENCE=Play sentence
 INFO_CURRENT_LINE=Line:
 INFO_CURRENT_NOTE=Note:
 
 INFO_MIDI_CHANNEL_OFF= Channel %0:s off!
-INFO_MIDI_CHANNEL_RESET= All channels on!
+INFO_MIDI_CHANNEL_RESET= All channel's on!
 
 MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
 JUKEBOX_RANDOM=Random
@@ -737,10 +734,10 @@ ABOUT_MAIN=About...
 ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
 ABOUT_MAIN_WHEREAMI=About...
 ABOUT_USDX_CREDITS=Credits
-ABOUT_USDX_DEVELOPEDBY=Developed by
-ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+ABOUT_USDX_DEVELOPEDBY=Sukūrė
+ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends. \n Fun is guaranteed.\n\nWorldParty is a fork of the original version Ultrastar Deluxe 1.1 designed and developed by UltraStar España Team, it counts with the biggest karaoke community.\n\n\nThis program is free and libre under the GPL license. \n\n Visit us for more information.\n\nhttp://ultrastar-es.org
 
 
-DEVELOPERS_TITLE=Developed by
-DEVELOPERS_OVERVIEW=People who has contribuited to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
+DEVELOPERS_TITLE=Sukūrė
+DEVELOPERS_OVERVIEW=Žmonės, prisidėję prie šio projekto:\n\n\nZup3r_vock\n\nDaniel20\n\n\n\n Visit us for more information.\n\nhttp://ultrastar-es.org
 
