--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -1,33 +1,5 @@
 ﻿[Text]
-OPTION_VALUE_CATALAN=Katalanisch
-OPTION_VALUE_CHINESE=Chinesisch
-OPTION_VALUE_CROATIAN=Kroatisch
-OPTION_VALUE_CZECH=Tschechisch
-OPTION_VALUE_DANISH=Dänisch
-OPTION_VALUE_DUTCH=Niederländisch
-OPTION_VALUE_ENGLISH=Englisch
-OPTION_VALUE_EUSKARA=Baskisch
-OPTION_VALUE_FINNISH=Finnisch
-OPTION_VALUE_FRENCH=Französisch
-;TODO: OPTION_VALUE_GAELIC=Scottish Gaelic
-OPTION_VALUE_GALICIAN=Galicisch
-OPTION_VALUE_GERMAN=Deutsch
-OPTION_VALUE_GREEK=Griechisch
-OPTION_VALUE_HUNGARIAN=Ungarisch
-OPTION_VALUE_ICELANDIC=Isländisch
-OPTION_VALUE_ITALIAN=Italienisch
-OPTION_VALUE_JAPANESE=Japanisch
-OPTION_VALUE_LUXEMBOURGISH=Luxemburgisch
-OPTION_VALUE_NORWEGIAN=Norwegisch
-OPTION_VALUE_POLISH=Polnisch
-OPTION_VALUE_PORTUGUESE=Portugiesisch
-;TODO: OPTION_VALUE_ROMANIAN=Romanian
-OPTION_VALUE_RUSSIAN=Russisch
-OPTION_VALUE_SERBIAN=Serbisch
-OPTION_VALUE_SLOVAK=Slowakisch
-OPTION_VALUE_SLOVENIAN=Slowenisch
-OPTION_VALUE_SPANISH=Spanisch
-OPTION_VALUE_SWEDISH=Schwedisch
+LANGUAGE=Deutsch
 
 OPTION_VALUE_EASY=Einfach
 OPTION_VALUE_MEDIUM=Mittel
@@ -552,7 +524,7 @@ SONG_MENU_REFRESH_SCORES_ALL_SONGS=Alle Songs
 SONG_MENU_REFRESH_SCORES_ONLY_SONG=Diesen Song
 SONG_MENU_REFRESH_SCORES_REFRESH=Update
 SONG_MENU_REFRESH_SCORES_ERROR_CONNECTION=Fehler beim Verbindungsaufbau zur Webseite: %0:s!
-;TODO: SONG_MENU_REFRESH_SCORES_ERROR_FILE=File not found: '%0:s [Download Scores]'!
+SONG_MENU_REFRESH_SCORES_ERROR_FILE=Datei nicht gefunden: '%0:s [Download Scores]'!
 
 SONG_SCORE_MAX=Beste:
 SONG_SCORE_MEDIA=Durchschnitt:
@@ -651,7 +623,7 @@ SONG_MENU_NAME_SORTING=Sortierungsmenü
 SONG_MENU_SORTING_TABS_ON=Ordner an
 SONG_MENU_SORTING_TABS_OFF=Ordner aus
 SONG_MENU_SORTING_ALL=Alles
-SONG_MENU_SORTING_DUET=Duett
+SONG_MENU_SORTING_DUET=DuettScores
 SONG_MENU_SORTING_APPLY=Anwenden
 
 SING_OPTIONS_WEBCAM=Webcam
@@ -673,17 +645,17 @@ SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
 SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Graustufen
 SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Schwarz & Weiß
 SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negativ
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
-SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dehnung
-SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Schwellwert
+SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binärbild
+SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilatieren
+SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Schwellenwert
 SING_OPTIONS_WEBCAM_EFFECT_EDGES=Kanten
 SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Weichzeichnen
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
+SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Ausgegleichen
+SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodieren
 
 PARTY_PLAYLIST_MANUAL=Manuelle Auswahl
 PARTY_MODE_JUKEBOX_NO_SONGS=Playlist ist leer!
-;TODO: SONG_MENU_OPEN_CATEGORY=Open category
+SONG_MENU_OPEN_CATEGORY=Kategorie öffnen
 SONG_MENU_CLOSE_CATEGORY=Kategorie schließen
 SONG_MENU_START_JUKEBOX=Jukebox starten!
 SONG_MENU_NAME_JUKEBOX=Jukebox Menü
@@ -707,10 +679,10 @@ SING_OPTIONS_JUKEBOX_DESC=Verändere Jukebox Einstellungen
 SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Einstellungen
 
 OPTION_VALUE_TO_SING=Singen
-;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
-;TODO: OPTION_VALUE_OTHER=Other
-;TODO: OPTION_VALUE_FILL=Fill
+OPTION_VALUE_ACTUAL=Aktuelle
+OPTION_VALUE_NEXT=Nächste
+OPTION_VALUE_OTHER=Other
+OPTION_VALUE_FILL=Füllung
 OPTION_VALUE_OUTLINE=Umriss
 OPTION_VALUE_GRAY=Grau
 OPTION_VALUE_WHITE=Weiß
