--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -1,33 +1,5 @@
 ﻿[Text]
-OPTION_VALUE_CATALAN=Catalan
-;TODO: OPTION_VALUE_CHINESE=Chinese
-OPTION_VALUE_CROATIAN=Croate
-OPTION_VALUE_CZECH=Tchèque
-OPTION_VALUE_DANISH=Danois
-OPTION_VALUE_DUTCH=Néerlandais
-OPTION_VALUE_ENGLISH=Anglais
-OPTION_VALUE_EUSKARA=Basque
-OPTION_VALUE_FINNISH=Finnois
-OPTION_VALUE_FRENCH=Français
-;TODO: OPTION_VALUE_GAELIC=Scottish Gaelic
-;TODO: OPTION_VALUE_GALICIAN=Galician
-OPTION_VALUE_GERMAN=Allemand
-OPTION_VALUE_GREEK=Grec
-OPTION_VALUE_HUNGARIAN=Hongrois
-OPTION_VALUE_ICELANDIC=Islandais
-OPTION_VALUE_ITALIAN=Italien
-OPTION_VALUE_JAPANESE=Japonais
-OPTION_VALUE_LUXEMBOURGISH=Luxembourgeois
-OPTION_VALUE_NORWEGIAN=Norvégien
-OPTION_VALUE_POLISH=Polonais
-OPTION_VALUE_PORTUGUESE=Portugais
-;TODO: OPTION_VALUE_ROMANIAN=Romanian
-OPTION_VALUE_RUSSIAN=Russe
-OPTION_VALUE_SERBIAN=Serbe
-OPTION_VALUE_SLOVAK=Slovaque
-OPTION_VALUE_SLOVENIAN=Slovène
-OPTION_VALUE_SPANISH=Espagnol
-OPTION_VALUE_SWEDISH=Suédois
+LANGUAGE=Français
 
 OPTION_VALUE_EASY=Facile
 OPTION_VALUE_MEDIUM=Moyen
@@ -44,11 +16,11 @@ OPTION_VALUE_TITLE=Titre
 OPTION_VALUE_ARTIST=Artiste
 OPTION_VALUE_TITLE2=Titre2
 OPTION_VALUE_ARTIST2=Artiste2
-;TODO: OPTION_VALUE_YEAR=Year
-;TODO: OPTION_VALUE_DECADE=Decade
+OPTION_VALUE_YEAR=Année
+OPTION_VALUE_DECADE=Décennie
 OPTION_VALUE_PLAYLIST=Playlist
 
-;TODO: OPTION_VALUE_BORDERLESS=Borderless
+OPTION_VALUE_BORDERLESS=Plein écran
 
 OPTION_VALUE_WHENNOVIDEO=Si pas de vidéo
 ;TODO: OPTION_VALUE_WHENNOVIDEOANDIMAGE=When No Video and Image
@@ -60,7 +32,7 @@ OPTION_VALUE_HALF=Moitiée
 OPTION_VALUE_FULL_VID=Complète
 OPTION_VALUE_FULL_VID_BG=Complète (Fond + Vidéo)
 
-;TODO: OPTION_VALUE_GAIN_SOFT=Soft
+OPTION_VALUE_GAIN_SOFT=Doux
 ;TODO: OPTION_VALUE_GAIN_MEDIUM=Medium
 ;TODO: OPTION_VALUE_GAIN_HARD=Hard
 
@@ -96,11 +68,6 @@ OPTION_VALUE_SING=Chanter
 OPTION_VALUE_SELECT_PLAYERS=Choix des joueurs
 OPTION_VALUE_OPEN_MENU=Ouvrir le menu
 
-;TODO: OPTION_VALUE_SYSTEM_CURSOR=On [System Cursor]
-;TODO: OPTION_VALUE_GAME_CURSOR=On [Game Cursor]
-OPTION_VALUE_HARDWARE_CURSOR=Pointeur matériel
-OPTION_VALUE_SOFTWARE_CURSOR=Pointeur logiciel
-
 SING_LOADING=Chargement...
 
 SING_CHOOSE_MODE=Choisissez un mode de jeu
@@ -131,7 +98,7 @@ SING_OPTIONS_WHEREAMI=Options
 SING_OPTIONS_GAME=Jeu
 SING_OPTIONS_GRAPHICS=Graphismes
 SING_OPTIONS_SOUND=Audio
-;TODO: SING_OPTIONS_INPUT=Input
+SING_OPTIONS_INPUT=Contrôles
 SING_OPTIONS_LYRICS=Paroles
 SING_OPTIONS_THEMES=Thèmes
 SING_OPTIONS_RECORD=Micros
@@ -170,9 +137,9 @@ SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Mode 2 joueurs
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Prévisualiser volume
 SING_OPTIONS_SOUND_PREVIEWFADING=Prévisualiser fondu
 
-;TODO: SING_OPTIONS_INPUT_WHEREAMI=Options Input
+SING_OPTIONS_INPUT_WHEREAMI=Options Contrôles
 ;TODO: SING_OPTIONS_INPUT_DESC=Input settings
-;TODO: SING_OPTIONS_INPUT_MOUSE=Mouse
+SING_OPTIONS_INPUT_MOUSE=Souris
 ;TODO: SING_OPTIONS_INPUT_JOYPAD_SUPPORT=Controller support
 
 SING_OPTIONS_LYRICS_WHEREAMI=Options des paroles
@@ -242,7 +209,7 @@ SING_SONG_SELECTION_PLAYLIST=Playlist
 SING_SONGS_IN_CAT=Chansons
 PLAYLIST_CATTEXT=Playlist: %s
 
-;TODO: SING_TIME=TIME
+SING_TIME=Temps
 SING_TOTAL=Total
 SING_MODE=Mode chanter
 SING_NOTES=Notes
@@ -256,7 +223,7 @@ SONG_SCORE_WHEREAMI=Points
 
 SING_SCORE_TONE_DEAF=Casserole
 SING_SCORE_AMATEUR=Amateur
-SING_SCORE_WANNABE=Aspirant chant.
+SING_SCORE_WANNABE=Aspirant chant
 SING_SCORE_HOPEFUL=Espoir
 SING_SCORE_RISING_STAR=Star en herbe
 SING_SCORE_LEAD_SINGER=Artiste
@@ -515,12 +482,12 @@ SING_OPTIONS_NETWORK_AUTO_MODE=Automatique
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_INSERT=Insert
 ;TODO: SING_OPTIONS_NETWORK_LEGEND_DELETE=Delete
 
-;TODO: OPTION_PLAYER_1=Player 1
-;TODO: OPTION_PLAYER_2=Player 2
-;TODO: OPTION_PLAYER_3=Player 3
-;TODO: OPTION_PLAYER_4=Player 4
-;TODO: OPTION_PLAYER_5=Player 5
-;TODO: OPTION_PLAYER_6=Player 6
+OPTION_PLAYER_1=Jouer 1
+OPTION_PLAYER_2=Jouer 2
+OPTION_PLAYER_3=Jouer 3
+OPTION_PLAYER_4=Jouer 4
+OPTION_PLAYER_5=Jouer 5
+OPTION_PLAYER_6=Jouer 6
 OPTION_ALL_PLAYERS=Tout
 OPTION_ALL_SCORES=Tout
 ;TODO: OPTION_VALUE_SAVE=Save
@@ -563,12 +530,12 @@ MSG_INSERT_USER_CANCEL=Annuler
 ;TODO: SCORE_SEND_OTHER_USER= Other Username
 ;TODO: SCORE_SAVE=Save
 
-;TODO: SCORE_DOWNLOAD_TITLE=Download
+SCORE_DOWNLOAD_TITLE=Téléchargement
 ;TODO: SCORE_DOWNLOAD_SONG=Song:
-;TODO: SCORE_DOWNLOAD_CREATE_LIST=Preparing List...
-;TODO: SCORE_DOWNLOAD_RECEIVE_LIST=Downloading...
+SCORE_DOWNLOAD_CREATE_LIST=Prépartion de la liste...
+SCORE_DOWNLOAD_RECEIVE_LIST=Téléchargement...
 SCORE_DOWNLOAD_CANCEL=Annuler
-;TODO: SCORE_DOWNLOAD_OK=OK
+SCORE_DOWNLOAD_OK=OK
 ;TODO: SCORE_DOWNLOAD_SONG_UPDATE=%0:d song(s) change(s) by web!
 
 ;TODO: SING_OPTIONS_GAME_SHOWSCORES=Show Scores
@@ -593,9 +560,9 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Joueurs suivants, à vos micros !
 ;TODO: PARTY_MODE_TOURNAMENT_WIN_DESC=Round result
 ;TODO: PARTY_MODE_TOURNAMENT_CHAMPION=The champion is: %0:s!
 
-;TODO: EDIT_TITLE=Title:
-;TODO: EDIT_ARTIST=Artist:
-;TODO: EDIT_MP3=MP3:
+EDIT_TITLE=Titre:
+EDIT_ARTIST=Artiste:
+EDIT_MP3=MP3:
 ;TODO: EDIT_BPM=BPM:
 ;TODO: EDIT_GAP=GAP:
 ;TODO: EDIT_COVER=Cover:
@@ -614,7 +581,7 @@ PARTY_MODE_TOURNAMENT_ROUNDS_DESC=Joueurs suivants, à vos micros !
 INFO_FILE_SAVED=Fichier sauvegardé
 ;TODO: INFO_TIME_FIXED=Timings corrected
 ;TODO: INFO_CAPITALIZE=Capitalization corrected
-;TODO: INFO_EXIT=Do you want leave editor without save ?
+INFO_EXIT=Quitter l'éditeur sans enregistrer ?
 ;TODO: INFO_SONG_RELOADED=Song reloaded
 ;TODO: INFO_DIVIDED_BPM=BPM Divided
 ;TODO: INFO_MULTIPLIED_BPM=BPM Multiplied
@@ -627,11 +594,11 @@ INFO_FILE_SAVED=Fichier sauvegardé
 ;TODO: INFO_MIDI_CHANNEL_RESET= All channel's on!
 
 ;TODO: MSG_END_JUKEBOX=Do you want leave Jukebox Mode?
-;TODO: JUKEBOX_RANDOM=Random
-;TODO: JUKEBOX_REPEAT=Repeat
-;TODO: JUKEBOX_FIND=Find:
-;TODO: JUKEBOX_SORT=Sort:
-;TODO: JUKEBOX_SONGLIST=List of Songs
+JUKEBOX_RANDOM=Aléatoire
+JUKEBOX_REPEAT=Répéter
+JUKEBOX_FIND=Rechercher:
+JUKEBOX_SORT=Trier:
+JUKEBOX_SONGLIST=Liste de chansons
 
 ;TODO: SING_ERROR_DUET_MODE_PARTY = Duet! Not playable in Party Mode!
 
@@ -654,30 +621,30 @@ SONG_MENU_SORTING_ALL=Tout
 ;TODO: SONG_MENU_SORTING_DUET=Duets
 ;TODO: SONG_MENU_SORTING_APPLY=Apply
 
-;TODO: SING_OPTIONS_WEBCAM=Webcam
+SING_OPTIONS_WEBCAM=Caméra
 ;TODO: SING_OPTIONS_WEBCAM_DESC=Webcam Settings
 ;TODO: SING_OPTIONS_WEBCAM_WHEREAMI=Webcam Options
-;TODO: SING_OPTIONS_WEBCAM_ID=Webcam
+SING_OPTIONS_WEBCAM_ID=Caméra
 SING_OPTIONS_WEBCAM_RESOLUTION=Résolution
 ;TODO: SING_OPTIONS_WEBCAM_FPS=FPS
-;TODO: SING_OPTIONS_WEBCAM_NO_WEBCAM=No Webcam Found!
+SING_OPTIONS_WEBCAM_NO_WEBCAM=Aucune caméra trouvée!
 ;TODO: SING_OPTIONS_WEBCAM_FLIP=Flip
 SING_OPTIONS_WEBCAM_EFFECT=Effet
-;TODO: SING_OPTIONS_WEBCAM_BRIGHTNESS=Brightness
-;TODO: SING_OPTIONS_WEBCAM_SATURATION=Saturation
+SING_OPTIONS_WEBCAM_BRIGHTNESS=Luminosité
+SING_OPTIONS_WEBCAM_SATURATION=Saturation
 ;TODO: SING_OPTIONS_WEBCAM_HUE=Hue
-;TODO: SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Enable Preview
-;TODO: SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Disable Preview
+SING_OPTIONS_WEBCAM_ENABLE_PREVIEW=Activer l'aperçu
+SING_OPTIONS_WEBCAM_DISABLE_PREVIEW=Desactiver l'aperçu
 
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Grayscale
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Black & White
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Negative
+SING_OPTIONS_WEBCAM_EFFECT_NORMAL=Normal
+SING_OPTIONS_WEBCAM_EFFECT_GRAYSCALE=Nuances de gris
+SING_OPTIONS_WEBCAM_EFFECT_BLACK_WHITE=Noir et blanc
+SING_OPTIONS_WEBCAM_EFFECT_NEGATIVE=Négatif
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_BINARY_IMAGE=Binary Image
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_DILATE=Dilate
 SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Suppression du bruit
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EDGES=Edges
-;TODO: SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
+SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Flou gaussien
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
@@ -691,15 +658,15 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Suppression du bruit
 ;TODO: WEBSITE_EXIST_SONG=The song belongs to the website: %0:s
 ;TODO: WEBSITE_NOT_EXIST_SONG=The song does not belong to any website!
 
-;TODO: NAME_PLAYERS_COUNT=Number of Players
-;TODO: NAME_CURRENT_PLAYER=Player
+NAME_PLAYERS_COUNT=Nombre de joueurs
+NAME_CURRENT_PLAYER=Joueur
 
 SING_OPTIONS_GAME_SONGMENU=Menu
 ;TODO: OPTION_VALUE_ROULETTE=Roulette
 ;TODO: OPTION_VALUE_CHESSBOARD=Chessboard
 ;TODO: OPTION_VALUE_CAROUSEL=Carousel
 ;TODO: OPTION_VALUE_SLOTMACHINE=Slot Machine
-;TODO: OPTION_VALUE_LIST=List
+OPTION_VALUE_LIST=Liste
 ;TODO: OPTION_VALUE_MOSAIC=Tile
 
 ;TODO: SING_OPTIONS_JUKEBOX=Jukebox
@@ -708,14 +675,14 @@ SING_OPTIONS_GAME_SONGMENU=Menu
 
 OPTION_VALUE_TO_SING=Chanter
 ;TODO: OPTION_VALUE_ACTUAL=Actual
-;TODO: OPTION_VALUE_NEXT=Next
-;TODO: OPTION_VALUE_OTHER=Other
+OPTION_VALUE_NEXT=Suivant
+OPTION_VALUE_OTHER=Autre
 ;TODO: OPTION_VALUE_FILL=Fill
 ;TODO: OPTION_VALUE_OUTLINE=Outline
-;TODO: OPTION_VALUE_GRAY=Gray
-;TODO: OPTION_VALUE_WHITE=White
+OPTION_VALUE_GRAY=Gris
+OPTION_VALUE_WHITE=Blanc
 ;TODO: OPTION_VALUE_TURQUOISE=Turquoise
-;TODO: OPTION_VALUE_SALMON=Salmon
+OPTION_VALUE_SALMON=Saumon
 ;TODO: OPTION_VALUE_GREENYELLOW=GreenYellow
 ;TODO: OPTION_VALUE_LAVENDER=Lavender
 ;TODO: OPTION_VALUE_BEIGE=Beige
@@ -731,12 +698,12 @@ OPTION_VALUE_TO_SING=Chanter
 ;TODO: OPTION_VALUE_CYAN=Cyan
 ;TODO: OPTION_VALUE_FLAME=Flame
 
-;TODO: JUKEBOX_SONGOPTIONS_VIDEO=Video Options
+JUKEBOX_SONGOPTIONS_VIDEO=Paramètres vidéo
 ;TODO: JUKEBOX_SONGOPTIONS_VIDEO_ASPECT=Aspect
 ;TODO: JUKEBOX_SONGOPTIONS_VIDEO_WIDTH=Width
 ;TODO: JUKEBOX_SONGOPTIONS_VIDEO_HEIGHT=Height
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC=Lyric Options
-;TODO: JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Size
+JUKEBOX_SONGOPTIONS_LYRIC_SIZE=Taille
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_POSITION=Position
 ;TODO: JUKEBOX_SONGOPTIONS_LYRIC_ALPHA=Alpha
 JUKEBOX_SONGOPTIONS_LYRIC_COLOR=Couleur
@@ -755,7 +722,7 @@ JUKEBOX_SONGOPTIONS_LYRIC_RGB_BLUE=Bleu
 ;TODO: JUKEBOX_SONGOPTIONS_DEFAULT=Default
 ;TODO: JUKEBOX_SONGOPTIONS_OPTIONSSAVED=Saved!
 
-;TODO: SING_SONG_CREDITS=Credits
+SING_SONG_CREDITS=Crédits
 ;TODO: SING_JUKEBOX=Jukebox
 ;TODO: SING_JUKEBOX_DESC=Listen to my collection
 ;TODO: JUKEBOX_MODE=Jukebox Mode
@@ -767,12 +734,12 @@ JUKEBOX_OPTIONS_PLAYLIST=Playlist
 ;TODO: SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
 OPTION_VALUE_ALL=Tout
-;TODO: OPTION_VALUE_PLAYER=Player
+OPTION_VALUE_PLAYER=Joueur
 
-;TODO: SING_ABOUT=About
-;TODO: SING_ABOUT_DESC=About Ultrastar Deluxe
-;TODO: ABOUT_MAIN=About...
-;TODO: ABOUT_MAIN_DESC=Ultrastar Deluxe
-;TODO: ABOUT_MAIN_WHEREAMI=About...
-;TODO: ABOUT_USDX_CREDITS=Credits
+SING_ABOUT=À propos
+SING_ABOUT_DESC=À propos Ultrastar Deluxe WorldParty
+ABOUT_MAIN=À propos...
+ABOUT_MAIN_DESC=Ultrastar Deluxe WorldParty
+ABOUT_MAIN_WHEREAMI=À propos...
+ABOUT_USDX_CREDITS=Crédits
 ;TODO: ABOUT_OVERVIEW=UltraStar Deluxe is a free OpenSource karaoke game for your PC. The gameplay experience is similar to that of the commercial product SingStar™ by Sony Computer Entertainment, which is exclusively available for the Playstation®. Unlike SingStar™, however, UltraStar Deluxe allows users to create their own songs and sing them on their PC.\nBy publishing the sourcecode, we’ve enabled you to customize the game completly to your heart’s content, desires and particular needs.\nEspecially you are allowed to modify the product as you wish.\n\nCreate your own themes or download content from the community, such as plugins, free songs or code patches for extended features.\nIn party mode it allows up to twelve players to sing along to your favorite music in order to score points, depending on the pitch of the voice and the rhythm of singing.
