removed unused libraries

--- a/install
+++ b/install
@@ -1,6 +1,6 @@
-apt-get update && apt-get install fpc libsdl2-dev libsdl2-image-dev libsdl2-image-2.0-0 libsdl2-2.0-0 libsdl2-mixer-2.0-0 libsdl2-mixer-dev libsdl2-net-2.0-0 libsdl2-net-dev libsdl2-ttf-2.0-0 libsdl2-ttf-dev libsdl2-gfx-1.0-0 libsdl2-gfx-dev ffmpeg libavdevice-dev libsqlite3-0 libsqlite3-dev libpcre3 libpcre3-dev ttf-dejavu ttf-freefont portaudio19-dev lua5.1-dev libpng16-16 libopencv-highgui-dev libprojectm-dev
+sudo apt-get update && sudo apt-get install automake make gcc fpc libsdl2-image-dev libavformat-dev libswscale-dev libsqlite3-dev libfreetype6-dev portaudio19-dev libportmidi-dev liblua5.3-dev libopencv-highgui-dev
 ./autogen.sh
 ./configure
 make
 make install
-cp WorldParty.desktop /usr/share/applications/Worldparty.desktop
+cp dists/linux/WorldParty.desktop /usr/share/applications/WorldParty.desktop
