removed old credits and moved thanks to developers screen

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -733,4 +733,5 @@ ABOUT_USDX_DEVELOPEDBY=Desarrollado por
 ABOUT_OVERVIEW=Descubre una nueva manera de cantar, solo, en pareja o con amigos. \nLa diversión estará asegurada.\n\nWorldParty es una modificación de la versión original Ultrastar Deluxe 1.1 diseñado y desarrollado por el equipo de UltraStar España, cuenta con el apoyo de la comunidad más grande del mundo de karaoke. \n\n\nEste programa es gratuito y libre bajo licencia GPL. \n\nVisitad nuestra web para más información.\n\nhttps://ultrastar-es.org
 
 DEVELOPERS_TITLE=Desarrollado por
-DEVELOPERS_OVERVIEW=Gente que ha contribuido en este proyecto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\n\n Visítanos para más información.\n\nhttps://ultrastar-es.org
+DEVELOPERS_OVERVIEW=Gente que ha contribuido en este proyecto:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\nTeLiXj\n\n\n Visítanos para más información.\n\nhttps://ultrastar-es.org
+DEVELOPERS_USDX_OVERVIEW=Gracias a Corvus5, brian-ch, brunzelchen, canni0, k-m_schindler, whiteshark0, BasisBit y todos los que han colaborado con UltraStar y UltraStar Deluxe
