moved songs loading to a thread and showed progress on main screen

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -70,6 +70,8 @@ OPTION_VALUE_SELECT_PLAYERS=Elegir jugadores
 OPTION_VALUE_OPEN_MENU=Abrir menú
 
 SING_LOADING=Cargando...
+SING_LOADING_CHECK_FOLDER=Buscando canciones en la carpeta %s
+SING_LOADING_FINISH=Carga finalizada. ¡Ya puedes cantar!
 
 SING_CHOOSE_MODE=Elige
 SING_SING=Canta
@@ -452,6 +454,7 @@ MSG_END_PARTY=¿Seguro que quieres salir del modo fiesta?
 ERROR_NO_SONGS=No hay canciones
 ERROR_NO_PLUGINS=No hay plugins
 ERROR_NO_MODES_FOR_CURRENT_SETUP=No hay modos disponibles para la configuración actual de equipos y jugadores
+ERROR_LOADING_SONGS=Espera a que terminen de cargar las canciones
 ERROR_CAN_NOT_START_PARTY=Ocurrió un error al iniciar el juego
 ERROR_CORRUPT_SONG=Imposible cargar la canción.
 ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Imposible cargar la canción: Archivo no encontrado
