--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -71,6 +71,8 @@ OPTION_VALUE_OPEN_MENU=Open Menu
 
 
 SING_LOADING=Loading...
+SING_LOADING_CHECK_FOLDER=Searching songs on folder %s
+SING_LOADING_FINISH=Load finished. ¡Sing!
 
 SING_CHOOSE_MODE=Choose Mode
 SING_SING=Sing
@@ -432,7 +434,7 @@ SCREENSHOT_SAVED=Screenshot saved
 SCREENSHOT_FAILED=Couldn''t save screenshot
 
 INFO_FILE_SAVED=File saved
-ERROR_SAVE_FILE_FAILED=Couldn''t save file 
+ERROR_SAVE_FILE_FAILED=Couldn''t save file
 ERROR_FILE_NOT_FOUND=File not found
 
 ENCODING_ERROR_ASK_FOR_UTF8=Cannot save changes in current encoding. Convert to UTF-8?
@@ -447,6 +449,7 @@ MSG_END_PARTY=Really leave Party Mode?
 ERROR_NO_SONGS=No Songs loaded
 ERROR_NO_PLUGINS=No Plugins loaded
 ERROR_NO_MODES_FOR_CURRENT_SETUP=No modes available for current player/team setup
+ERROR_LOADING_SONGS=Wait to finish songs loading
 ERROR_CAN_NOT_START_PARTY=An error occurred starting the party game
 ERROR_CORRUPT_SONG=Song could not be loaded.
 ERROR_CORRUPT_SONG_FILE_NOT_FOUND=Song could not be loaded: File not found
@@ -665,7 +668,7 @@ OPTION_VALUE_LIST=List
 OPTION_VALUE_MOSAIC=Tile
 
 SING_OPTIONS_JUKEBOX=Jukebox
-SING_OPTIONS_JUKEBOX_DESC=Default Configurations of Jukebox 
+SING_OPTIONS_JUKEBOX_DESC=Default Configurations of Jukebox
 SING_OPTIONS_JUKEBOX_WHEREAMI=Jukebox Options
 
 OPTION_VALUE_TO_SING=Sing
@@ -722,11 +725,11 @@ SING_JUKEBOX=Jukebox
 SING_JUKEBOX_DESC=Listen to my collection
 JUKEBOX_MODE=Jukebox Mode
 JUKEBOX_OPTIONS_DESC=Playlist Options
-JUKEBOX_OPTIONS_WHEREAMI=Jukebox Options 
+JUKEBOX_OPTIONS_WHEREAMI=Jukebox Options
 JUKEBOX_OPTIONS_PLAYLIST=Playlist
 JUKEBOX_OPTIONS_PLAYLIST_MODE=Mode
 
-SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing 
+SING_OPTIONS_ADVANCED_SINGSCORES=Scores on Singing
 SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
 OPTION_VALUE_ALL=All
 OPTION_VALUE_PLAYER=Player
@@ -743,4 +746,3 @@ ABOUT_OVERVIEW=Discover a new way of singing, alone, in couple, or with friends.
 
 DEVELOPERS_TITLE=Developed by
 DEVELOPERS_OVERVIEW=People who has contribuited to this project:\n\n\nZup3r_vock\n\nDaniel20\n\njmfb\n\n\n Visit us for more information.\n\nhttps://ultrastar-es.org
-
