Removed a lot of translations on UIni to use AddSlide translation

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -32,9 +32,9 @@ OPTION_VALUE_HALF=Mitad
 OPTION_VALUE_FULL_VID=Completo (video)
 OPTION_VALUE_FULL_VID_BG=Completo (fondo y video)
 
-;TODO: OPTION_VALUE_GAIN_SOFT=Soft
-;TODO: OPTION_VALUE_GAIN_MEDIUM=Medium
-;TODO: OPTION_VALUE_GAIN_HARD=Hard
+OPTION_VALUE_GAIN_SOFT=Poca
+OPTION_VALUE_GAIN_MEDIUM=Media
+OPTION_VALUE_GAIN_HARD=Mucha
 
 OPTION_VALUE_AUTO=Auto
 OPTION_VALUE_SEC=Segundo
@@ -143,7 +143,7 @@ SING_OPTIONS_SOUND_CLICK_ASSIST=Clic en notas
 SING_OPTIONS_SOUND_BEAT_CLICK=Activar metrónomo
 SING_OPTIONS_SOUND_THRESHOLD=Reducción de ruido
 SING_OPTIONS_SOUND_TWO_PLAYERS_MODE=Modo 2 jugadores
-;TODO: SING_OPTIONS_SOUND_MUSICAUTOGAIN=Music Gain
+SING_OPTIONS_SOUND_MUSICAUTOGAIN=Ganancia
 SING_OPTIONS_SOUND_PREVIEWVOLUME=Volumen vista previa
 SING_OPTIONS_SOUND_PREVIEWFADING=Desvanecer audio
 
@@ -540,7 +540,7 @@ SCORE_DOWNLOAD_CANCEL=Cancelar
 SCORE_DOWNLOAD_OK=OK
 SCORE_DOWNLOAD_SONG_UPDATE=Existe %0:d canciones(s) modificadas(s) en la web
 
-OPTION_VALUE_WHEN_EXIST=Cuando exista
+OPTION_VALUE_WHEN_EXISTS=Cuando exista
 
 PARTY_SELECT_MODE=Modo
 PARTY_MODE_CLASSIC=Clásico
